--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hackathon-back",
+  "name": "package.json",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,23 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.17.1",
+    "mongodb": "^3.6.4",
     "mongoose": "^5.11.16",
-    "morgan": "~1.9.1"
-  }
+    "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.7"
+  },
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LuObreg/Hackathon-Back.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/LuObreg/Hackathon-Back/issues"
+  },
+  "homepage": "https://github.com/LuObreg/Hackathon-Back#readme",
+  "description": ""
 }
