--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "^4.17.1",
     "mongodb": "^3.6.4",
-    "morgan": "~1.9.1",
     "mongoose": "^5.11.16",
+    "morgan": "~1.9.1",
     "nodemon": "^2.0.7"
   }
 }
